# sim-project

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  Assumptions.md  Makefile  Makefile.config  README.md  format.py  meson.build  meson_options.txt  sim-project.sublime-project
sim/: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  Assumptions.md  LICENSE  Makefile  Makefile.config  README.md  format.py  meson.build
sim/importer/: Makefile  importer.cc  repair_and_scale_submissions_ids.cc
sim/include/sim/: constants.hh  cpp_syntax_highlighter.hh  inf_datetime.hh  is_username.hh  judging_config.hh  primary_key.hh  random.hh
sim/scripts/: add_problem.py  coverity.sh  reupload_problem.py  setup-public-sim-on-debian11.sh  setup-public-sim-on-debian12.sh  setup-sim-for-camp-on-debian10.sh  setup-sim-for-camp-on-debian11.sh  setup-sim-for-camp-on-debian12.sh  setup_sim_on_debian_12.py  tar_repository_files  update_db_schema
sim/src/: .gitignore  Makefile  add_report.php  backup.cc  backup.sh  bodzio.php  chmod-default.cpp  contests.php  index.php  killinstc.cc  manage.cc  put.php  server.conf  setup_install.cc  setup_install.cpp  setup_installation.cc  sim_upgrader.cc  sql_tables.hh
sim/src/Conver/: .gitignore  Makefile  compile.cpp  conver.cc  conver.h  convert_package.cc  convert_package.h  default_checker.c  main.cpp  main.h  other_functions.h  set_limits.cc  set_limits.h  validate_package.cc  validate_package.h
sim/src/CppToHTML/: Makefile  aho.cpp  main.cpp  main.h
sim/src/Job-server/: Makefile  change_problem_statement_job_handler.cc  change_problem_statement_job_handler.h  contest.cc  contest.h  contest_problem_reselect_final_submissions.cc  contest_problem_reselect_final_submissions.h  delete_contest_job_handler.cc  delete_contest_job_handler.h  delete_contest_problem_job_handler.cc  delete_contest_problem_job_handler.h  delete_contest_round_job_handler.cc  delete_contest_round_job_handler.h  delete_internal_file_job_handler.cc  delete_problem_job_handler.cc  delete_user_job_handler.cc  delete_user_job_handler.h  job_handler.cc  job_handler.h  judge.cc  judge.h  judge_job_handler_base.cc  judge_job_handler_base.h  judge_or_rejudge_job_handler.cc  judge_or_rejudge_job_handler.h  main.cc  merge_problems_job_handler.h  problem.cc  problem.h  problem_add_job_handler.cc  problem_add_judge_model_solution_job_handler.h  problem_add_or_reupload_job_handler_base.cc  problem_add_or_reupload_job_handler_base.h  problem_add_or_reupload_judge_model_solution_job_handler_base.cc  problem_add_or_reupload_judge_model_solution_job_handler_base.h  problem_package_reset_limits_job_handler_base.cc  problem_reupload_job_handler.cc  problem_reupload_job_handler.h  reset_problem_time_limits_job_handler.cc  reset_problem_time_limits_job_handler.h  (+2 more)
sim/test/: .gitignore  Makefile  cpp_syntax_highlighter.cc  jobs.cc
simlib/: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  LICENSE  Makefile  Makefile.config  README.md  dump_file_as_c_array.py  format.py  meson.build  tidy  tidy.sh
simlib/doc/: .gitignore  README.md  bubble-generator-data.tcl  bubble-generator.tcl  config_file.md  simfile.md
simlib/googletest/: Makefile
simlib/include/: STD_SHA_256.h  aho_corasick.h  aho_corasick.hh  always_false.hh  argv_parser.hh  avl_dict.h  avl_dict.hh  call_in_destructor.hh  compile.h  concat.hh  concat_common.hh  concat_tostr.hh  config_file.h  config_file.hh  ctype.hh  debug.h  debug.hh  defer.h  defer.hh  directory.hh  enum_val.hh  event_queue.hh  file_contents.hh  file_descriptor.hh  file_info.hh  file_manip.hh  file_path.hh  filesystem.h  filesystem.hh  humanize.hh  inotify.hh  inplace_array.hh  inplace_buff.hh  libarchive_zip.h  libarchive_zip.hh  libzip.h  libzip.hh  likely.h  logger.h  logger.hh  (+49 more)
simlib/src/: .gitignore  Makefile  STD_SHA_256.cpp  aho_corasick.cc  compile.cc  config_file.cc  debug.cc  dump_file_as_c_array.c  event_queue.cc  file_contents.cc  file_manip.cc  filesystem.cc  humanize.cc  inotify.cc  libarchive_zip.cc  logger.cc  mysql.cc  ncg.c  ncg.cc  old_sandbox.cc  path.cc  proc_stat_file_contents.cc  proc_status_file.cc  process.cc  random.cc  recursive_readlink.cc  sandbox.cc  sandbox_checker_callback.cc  sha.cc  sha3.c  sim_problem.cc  socket_stream_ext.cc  spawner.cc  string.cc  string_compare.cc  temporary_directory.cc  temporary_file.cc  time.cc  unlinked_temporary_file.cc  working_directory.cc  (+1 more)
simlib/test/: .gitignore  Makefile  argv_parser.cc  array_vec.cc  avl_dict.cc  call_in_destructor.cc  compilation_cache.hh  concat.cc  concat_common.cc  concat_tostr.cc  config_file.cc  constructor_traits.cc  contains.cc  conver.cc  ctype.cc  debug.cc  defer.cc  deserializer.cc  directory.cc  enum_val.cc  err_defer.cc  errmsg.cc  event_queue.cc  fd_pread_buff.cc  file_contents.cc  file_descriptor.cc  file_descriptor_exists.hh  file_info.cc  file_manip.cc  file_path.cc  filesystem.cc  from_unsafe.cc  get_byte_of.hh  get_file_permissions.hh  humanize.cc  inotify.cc  inplace_array.cc  inplace_buff.cc  intercept_logger.hh  libzip.cc  (+50 more)
sip/: .clang-format  .gitignore  .gitmodules  .travis.yml  Makefile  Makefile.config  README.md  format.py  meson.build  tidy.sh
sip/src/: .gitignore  Makefile  command_version.cc  commands.cc  commands.h  commands.hh  compilation_cache.cc  compilation_cache.h  compilation_cache.hh  constants.h  constants.hh  default_checker.c  gen-line.cc  gen_git_commit_cc.py  gen_git_commit_hh.py  gentests.cc  git_commit.hh  main.cc  maintenance_commands.cc  proot_dump.h  simfile_commands.cc  sip.cc  sip.h  sip_error.h  sip_error.hh  sip_judge_logger.h  sip_judge_logger.hh  sip_package.cc  sip_package.h  sip_package.hh  sipfile.cc  sipfile.h  sipfile.hh  templates.cc  templates.hh  tests_files.cc  tests_files.h  tests_files.hh  utils.cc  utils.h  (+1 more)
sip/templates/: .gitignore  checker.cc  gen.cc  interactive_checker.cc  sim-statement.cls  statement.tex
sip/test/: run_sip_tests.py
sip/tutorial_pl/: README.md
subprojects/sim/: .gitignore  .travis.yml  README.md  meson.build  meson_options.txt  tidy
(+2209 files in other folders)
